{
    "name": "PlayerFishInputActions",
    "maps": [
        {
            "name": "Base",
            "id": "0264752e-630a-475f-ba6e-df55ab20e10b",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d0025bfa-5298-4d7b-b416-da323a8284ac",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SnatchPlankton",
                    "type": "Button",
                    "id": "5e2cfd87-52d4-4ca4-b08c-d6b7bdc0ecd9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "bedcff59-d88e-4e22-a536-820a682e6d6e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3dc0bfb1-c6fe-4edd-a3ad-f6ce68fcd682",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e5743158-c99e-48f5-a70a-ab9d27a6094f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3c33f440-85de-42f7-a800-d30af6c234b6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "849e26b6-1d8f-4a96-afdc-317fd6d6a6d2",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a462b817-98e3-4ba3-8e6a-db16e0f8509d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SnatchPlankton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}